--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -1,11 +1,15 @@
 ---
-
+import Flag from "@components/partials/Flag.astro";
 ---
-<div class="module services">
-    <div class="grid-wrap">
-        <div class="col-span-full">
-            Services <br>
-            Was ich konkret als Frontend-Entwickler für Dienste anbieten kann
+
+<div class="module services ">
+    <div class="grid">
+        <div class="col-span-12">
+            <Flag>Services</Flag>
+            <h2>Was ich biete</h2>
+            <p>
+                Was ich konkret als Frontend-Entwickler für Dienste anbieten kann
+            </p>
         </div>
     </div>
 </div>
