added lazy loading scroll reveal

--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -6,8 +6,8 @@ import Flag from "@components/partials/Flag.astro";
     <div class="grid">
         <div class="col-span-12">
             <Flag>Services</Flag>
-            <h2>Was ich biete</h2>
-            <p>
+            <h2 data-scroll-reveal>Was ich biete</h2>
+            <p data-scroll-reveal>
                 Was ich konkret als Frontend-Entwickler für Dienste anbieten kann
             </p>
         </div>
