--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -3,7 +3,7 @@
 ---
 <nav data-anchor-navigation data-scroll-reveal class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-all">
     <div class="grid px-0">
-        <ol class="col-span-full flex overflow-auto lg:justify-center
+        <ol class="col-span-full flex overflow-auto scrollbar-hide lg:justify-center
         before:content-[''] before:absolute before:top-0 before:left-0 before:right-0 before:border-t before:border-gray-300 before:w-screen
         after:content-[''] after:absolute after:bottom-0 after:left-0 after:right-0 after:border-t after:border-gray-300 after:w-screen
         ">
