--- a/src/components/modules/ShortFacts.astro
+++ b/src/components/modules/ShortFacts.astro
@@ -8,24 +8,24 @@ import Flag from "@components/partials/Flag.astro";
             <h2 data-scroll-reveal class="mb-20 lg:mb-40">Key Facts</h2>
         </div>
     </div>
-    <ul class="flex lg:grid grid-lg lg:gap-20 text-center overflow-auto lg:overflow-visible">
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center ml-10 mr-20 lg:m-0 [text-shadow:2px_2px_2px_rgba(0,0,0,0.3)] lg:col-span-4 lg:row-span-2 w-314 h-200 lg:h-453 lg:w-auto animated-background bg-gradient-to-r from-green via-[#56B096] to-green">
-            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center">
+    <ul class="flex lg:grid grid-lg lg:gap-20 text-center overflow-auto lg:overflow-visible scrollbar-hide">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center ml-10 mr-20 lg:m-0 [text-shadow:2px_2px_2px_rgba(0,0,0,0.3)] lg:col-span-4 lg:row-span-2 w-314 h-250 lg:h-453 lg:w-auto animated-background bg-gradient-to-r from-green via-[#56B096] to-green">
+            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center w-full">
                 <span class="w-full text-48 leading-48 lg:text-96 lg:leading-96"><span data-count-up-number="9" class="inline-block w-30 lg:w-60">0</span>+</span>
                 <span class="w-full">Jahre Erfahrung <br> im Frontend-Development</span>
             </p>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black border-1 lg:col-span-4 lg:row-span-1 w-250 h-200 lg:h-auto lg:w-auto">
-            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
+            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center w-full">
                 <span class="w-full text-48 leading-48 lg:text-96 lg:leading-96"><span data-count-up-number="75" class="inline-block w-54 lg:w-108">0</span>+</span>
                 <span class="w-full">Umgesetzte <br> Design-Systeme</span>
             </p>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black text-white border-1 lg:col-span-4 lg:row-span-1 w-250 h-200 lg:h-auto lg:w-auto">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black text-white border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
             <blockquote class="not-italic">„Ich baue Interfaces, <br> <span data-typing-effect>die sich richtig anfühlen.</span>“</blockquote>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-10 lg:m-0 col-span-6  text-white bg-black border-1 lg:col-span-8 lg:row-span-1 w-250 h-200 lg:h-auto lg:w-auto">
-            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-10 lg:m-0 col-span-6  text-white bg-black border-1 lg:col-span-8 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
+            <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center w-full">
                 <span class="w-full text-48 leading-48 lg:text-96 lg:leading-96"><span data-count-up-number="800000" class="inline-block w-180 lg:w-360">0</span>+</span>
                 <span class="w-full">Zeilen <br> Code geschrieben</span>
             </p>
