--- a/src/styles/utilities/general.css
+++ b/src/styles/utilities/general.css
@@ -23,4 +23,12 @@
         }
     }
 
+    .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+    }
+    .scrollbar-hide {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+
 }
