--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -19,14 +19,14 @@ import CVEntry from "@components/partials/CVEntry.astro";
                         <Fragment slot="year">2022 - heute</Fragment>
                         <Fragment slot="title">Ausbilder für Mediengestaltung</Fragment>
                         <p>
-                            Betreuung und Schulung von Auszubildenden
+                            Betreuung und Schulung<br> von Auszubildenden
                         </p>
                     </CVEntry>
                     <CVEntry alignment="right">
                         <Fragment slot="year">2022</Fragment>
                         <Fragment slot="title">Ausbildereignung</Fragment>
                         <p>
-                            IHK Düsseldorf <br>
+                            IHK zu Düsseldorf <br>
                             Berufs- und Arbeitspädagogik
                         </p>
                     </CVEntry>
@@ -43,7 +43,7 @@ import CVEntry from "@components/partials/CVEntry.astro";
                         <Fragment slot="year">2019</Fragment>
                         <Fragment slot="title">Ausbildung zum Mediengestalter</Fragment>
                         <p>
-                            Digital & Print - Gestaltung und Technik <br>
+                            Digital & Print - <br>Gestaltung und Technik <br>
                             Albrecht-Dürer-Berufskolleg Düsseldorf
                         </p>
                     </CVEntry>
