--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -4,12 +4,54 @@ import Flag from "@components/partials/Flag.astro";
 
 <div class="module services ">
     <div class="grid">
-        <div class="col-span-12">
+        <div class="col-span-12 lg:col-span-5">
             <Flag>Services</Flag>
-            <h2 data-scroll-reveal>Was ich biete</h2>
+            <h2 data-scroll-reveal>Was ich biete Vertical Slider</h2>
             <p data-scroll-reveal>
-                Was ich konkret als Frontend-Entwickler für Dienste anbieten kann
+                Ich unterstütze Unternehmen von der Strategie über Design und Entwicklung bis hin zur SEO-Optimierung und langfristigen Betreuung – für überzeugende, responsive Websites mit nachhaltigem Erfolg.
             </p>
         </div>
     </div>
+    <ol class="grid lg:gap-x-50 lg:gap-y-50">
+        <li class="relative z-3 bg-red lg:col-span-6 lg:order-1">
+            <h3>Strategie & Konzeption</h3>
+            <p>
+                Ein klarer Plan für deinen digitalen Erfolg: Ich entwickle Strategien, die deine Zielgruppe gezielt ansprechen und deine Website zum wirkungsvollen Instrument deiner Marke machen.
+            </p>
+        </li>
+        <li class="relative z-3 bg-orange lg:col-span-6 lg:order-2">
+            <h3>Responsives Webdesign</h3>
+            <p>
+                Modernes Design mit messbarem Effekt: Ich gestalte ansprechende, nutzerfreundliche Interfaces, die auf jedem Gerät überzeugen und deine Conversion-Rate steigern.
+            </p>
+        </li>
+        <li class="relative z-3 p-20 bg-dark-green lg:col-span-6 lg:order-4">
+            <h3>Frontend-Entwicklung</h3>
+            <p>
+                Schnelle, saubere und stabile Websites: Mit modernster Frontend-Technologie sorge ich für Performance, Skalierbarkeit und eine nahtlose User Experience.
+            </p>
+        </li>
+        <li class="relative z-3 bg-blue lg:col-span-6 lg:order-3">
+            <h3>SEO-Optimierung</h3>
+            <p>
+                Mehr Sichtbarkeit, mehr Reichweite, mehr Kunden: Durch technische SEO, schnelle Ladezeiten und gezielte Content-Strategie bringe ich dein Projekt ganz nach vorne in den Suchergebnissen.
+            </p>
+        </li>
+        <li class="relative z-3 bg-purple lg:col-span-6 lg:order-5">
+            <h3>Langfristige Betreuung</h3>
+            <p>
+                Sichere dir nachhaltigen Erfolg: Ich sorge für reibungslose Updates, proaktive Optimierungen und kontinuierliche Weiterentwicklung – damit deine Website nicht nur online bleibt, sondern stetig besser wird.
+            </p>
+        </li>
+    </ol>
 </div>
+
+
+
+
+
+
+
+
+
+
