--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -19,7 +19,7 @@
     --color-ui-red:                 #dc0030;
 
     --color-green:                  #A8E6CF;
-    --color-blue:                   #6B7C93;
+    --color-blue:                   #D0D8E2;
 
     --color-main-background:        #1B1E21;
 
