--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -1,50 +1,185 @@
 ---
 import Flag from "@components/partials/Flag.astro";
+import Swiper from "@components/partials/Swiper.astro";
+import IconArrowRight from "@components/icons/IconArrowRight.astro";
+import IconArrowLeft from "@components/icons/IconArrowLeft.astro";
+
+const swiperSettings = {
+    loop: false,
+    speed: 400,
+    effect: 'fade',
+    slidesPerView: 1,
+    spaceBetween: 0,
+    allowTouchMove: false,
+    autoplay: {
+        delay: 10000,
+        disableOnInteraction: true
+    },
+    pagination: {
+        el: '.swiper-pagination',
+        type: 'fraction',
+    },
+    breakpoints: {
+        1024: {
+
+        },
+        1100: {
+
+        },
+        1180: {
+
+        },
+        1240: {
+
+        },
+        1280: {
+
+        },
+        1340: {
+
+        },
+        1380: {
+
+        },
+        1440: {
+
+        }
+    }
+}
+
+const swiperSettingsJSON = JSON.stringify(swiperSettings);
 ---
 
-<div class="module services ">
+<div class="module services" id="services" aria-labelledby="services-title" role="region" data-services>
     <div class="grid">
-        <div class="col-span-12 lg:col-span-5">
+        <div class="col-span-5 lg:col-span-5">
             <Flag>Services</Flag>
-            <h2 data-scroll-reveal>Was ich biete Vertical Slider</h2>
-            <p data-scroll-reveal>
-                Ich unterstütze Unternehmen von der Strategie über Design und Entwicklung bis hin zur SEO-Optimierung und langfristigen Betreuung – für überzeugende, responsive Websites mit nachhaltigem Erfolg.
-            </p>
+            <Swiper className="!pt-80" swiperSettings={swiperSettingsJSON}>
+                <div class="swiper-slide">
+                    <div>
+                        <h2 class="h2 mb-20" id="services-title" data-scroll-reveal>Gemeinsam zur starken Website</h2>
+                        <p data-scroll-reveal>
+                            Ich unterstütze dich von der Strategie über Design und Entwicklung bis hin zur SEO-Optimierung und langfristigen Betreuung – für überzeugende, responsive Websites mit nachhaltigem Erfolg.
+                        </p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div>
+                        <h3 class="h2 mb-20">Strategie & Konzeption</h3>
+                        <p>
+                            Klare Strategien für deinen digitalen Erfolg: Ich denke ganzheitlich, plane strukturiert und begleite dein Projekt von der Idee bis zur Umsetzung – effizient, fokussiert und wirkungsvoll.
+                        </p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div>
+                        <h3 class="h2 mb-20">Responsives Webdesign</h3>
+                        <p>
+                            Individuelle Designs statt Lösungen von der Stange: Ich gestalte nutzerfreundliche Interfaces, die auf jedem Gerät überzeugen und deine Marke stark inszenieren.
+                        </p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div>
+                        <h3 class="h2 mb-20">Frontend-Entwicklung</h3>
+                        <p>
+                            Skalierbar, performant, zukunftssicher: Ich entwickle saubere Frontend-Architekturen mit Fokus auf Struktur, Qualität und eine nahtlose User Experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div>
+                        <h3 class="h2 mb-20">SEO-Optimierung</h3>
+                        <p>
+                            Mehr Sichtbarkeit, mehr Reichweite, mehr Kunden: Durch technische SEO, schnelle Ladezeiten und gezielte Content-Strategie bringe ich dein Projekt ganz nach vorne in den Suchergebnissen.
+                        </p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div>
+                        <h3 class="h2 mb-20">Langfristige Betreuung</h3>
+                        <p>
+                            Sichere dir nachhaltigen Erfolg: Ich sorge für reibungslose Updates, proaktive Optimierungen und kontinuierliche Weiterentwicklung – damit deine Website nicht nur online bleibt, sondern stetig besser wird.
+                        </p>
+                    </div>
+                </div>
+                <Fragment slot="pagination">
+                    <div data-scroll-reveal class="swiper-pagination !absolute !top-30 !left-0 !transform-none !w-auto !h-30 !mt-0"></div>
+                </Fragment>
+                <Fragment slot="button-prev">
+                    <button data-scroll-reveal class="swiper-button-prev !absolute !top-23 !left-100 !transform-none !mt-0" aria-label="Vorheriger Slide">
+                        <IconArrowLeft/>
+                    </button>
+                </Fragment>
+                <Fragment slot="button-next">
+                    <button data-scroll-reveal class="swiper-button-next !absolute !top-23 !left-150 !transform-none !mt-0" aria-label="Nächster Slide">
+                        <IconArrowRight/>
+                    </button>
+                </Fragment>
+            </Swiper>
         </div>
     </div>
-    <ol class="grid lg:gap-x-50 lg:gap-y-50">
-        <li class="relative z-3 bg-red lg:col-span-6 lg:order-1">
-            <h3>Strategie & Konzeption</h3>
-            <p>
-                Ein klarer Plan für deinen digitalen Erfolg: Ich entwickle Strategien, die deine Zielgruppe gezielt ansprechen und deine Website zum wirkungsvollen Instrument deiner Marke machen.
-            </p>
+    <ol class="relative flex items-start h-280 lg:h-400 mx-10 mt-10 ">
+        <li class="flex flex-wrap justify-center content-center absolute top-123 lg:top-0 left-0 lg:left-1/2 lg:-translate-x-1/2 lg:-ml-340 lg:mt-130 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none " data-scroll-reveal data-services-tile data-services-tile-id="2">
+            <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 256 256">
+                <path fill="currentColor" d="M68 152a36 36 0 1 0 36 36a36 36 0 0 0-36-36Zm0 56a20 20 0 1 1 20-20a20 20 0 0 1-20 20ZM34.34 106.34L48.69 92L34.34 77.66a8 8 0 0 1 11.32-11.32L60 80.69l14.34-14.35a8 8 0 0 1 11.32 11.32L71.31 92l14.35 14.34a8 8 0 0 1-11.32 11.32L60 103.31l-14.34 14.35a8 8 0 0 1-11.32-11.32Zm187.32 96a8 8 0 0 1-11.32 11.32L196 199.31l-14.34 14.35a8 8 0 0 1-11.32-11.32L184.69 188l-14.35-14.34a8 8 0 0 1 11.32-11.32L196 176.69l14.34-14.35a8 8 0 0 1 11.32 11.32L207.31 188Zm-45.19-89.51c-6.18 22.33-25.32 41.63-46.53 46.93a8.13 8.13 0 0 1-2 .24a8 8 0 0 1-1.93-15.76c15.63-3.91 30.35-18.91 35-35.68c3.19-11.5 3.22-29-14.71-46.9l-2.3-2.35V80a8 8 0 0 1-16 0V40a8 8 0 0 1 8-8h40a8 8 0 0 1 0 16h-20.69l2.35 2.34c18.24 18.25 24.92 40.44 18.81 62.49Z"/>
+            </svg>
+            <strong class="hidden lg:block text-black text-30 leading-30 font-light">Strategie & Konzeption</strong>
         </li>
-        <li class="relative z-3 bg-orange lg:col-span-6 lg:order-2">
-            <h3>Responsives Webdesign</h3>
-            <p>
-                Modernes Design mit messbarem Effekt: Ich gestalte ansprechende, nutzerfreundliche Interfaces, die auf jedem Gerät überzeugen und deine Conversion-Rate steigern.
-            </p>
+        <li class="flex flex-wrap justify-center content-center absolute top-68 left-100 lg:top-0 lg:left-1/2 lg:-translate-x-1/2 lg:-ml-100 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none" data-scroll-reveal data-services-tile data-services-tile-id="3">
+            <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10"  xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.5 12c0-4.478 0-6.718 1.391-8.109S7.521 2.5 12 2.5c4.478 0 6.718 0 8.109 1.391S21.5 7.521 21.5 12c0 4.478 0 6.718-1.391 8.109S16.479 21.5 12 21.5c-4.478 0-6.718 0-8.109-1.391S2.5 16.479 2.5 12m0-3h19M13 13h4m-4 4h2M7 6h.009M11 6h.009M9 9v12.5" color="currentColor"/>
+            </svg>
+            <strong class="hidden lg:block text-black text-30 leading-30 font-light">Responsives Webdesign</strong>
         </li>
-        <li class="relative z-3 p-20 bg-dark-green lg:col-span-6 lg:order-4">
-            <h3>Frontend-Entwicklung</h3>
-            <p>
-                Schnelle, saubere und stabile Websites: Mit modernster Frontend-Technologie sorge ich für Performance, Skalierbarkeit und eine nahtlose User Experience.
-            </p>
+
+        <li class="flex flex-wrap justify-center content-center absolute top-178 left-100 lg:top-0 lg:left-1/2 lg:-translate-x-1/2 lg:ml-140 lg:mt-130 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none" data-scroll-reveal data-services-tile data-services-tile-id="4">
+            <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                    <path d="M10 17h-.667a2 2 0 0 1-2-2v-1.889C7.333 12.556 6 12 6 12s1.333-.556 1.333-1.111V9a2 2 0 0 1 2-2H10m4 10h.667a2 2 0 0 0 2-2v-1.889C16.667 12.556 18 12 18 12s-1.333-.556-1.333-1.111V9a2 2 0 0 0-2-2H14"/>
+                    <path d="M21 3.6v16.8a.6.6 0 0 1-.6.6H3.6a.6.6 0 0 1-.6-.6V3.6a.6.6 0 0 1 .6-.6h16.8a.6.6 0 0 1 .6.6Z"/>
+                </g>
+            </svg>
+            <strong class="hidden lg:block text-black text-30 leading-30 font-light">Frontend-Entwicklung</strong>
         </li>
-        <li class="relative z-3 bg-blue lg:col-span-6 lg:order-3">
-            <h3>SEO-Optimierung</h3>
-            <p>
-                Mehr Sichtbarkeit, mehr Reichweite, mehr Kunden: Durch technische SEO, schnelle Ladezeiten und gezielte Content-Strategie bringe ich dein Projekt ganz nach vorne in den Suchergebnissen.
-            </p>
+
+        <li class="flex flex-wrap justify-center content-center absolute top-123 left-200 lg:top-0 lg:left-1/2 lg:-translate-x-1/2 lg:ml-138 lg:-mt-134 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none"  data-scroll-reveal data-services-tile data-services-tile-id="5">
+            <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" color="currentColor">
+                    <path d="m5 20l2.413-2.413m0 0a4.444 4.444 0 1 0 6.285-6.285a4.444 4.444 0 0 0-6.285 6.285"/>
+                    <path d="M3 15.188a7.4 7.4 0 0 1-1-3.726C2 7.341 5.358 4 9.5 4h5c4.142 0 7.5 3.341 7.5 7.462c0 3.25-2.087 6.014-5 7.038"/>
+                </g>
+            </svg>
+            <strong class="hidden lg:block text-black text-30 leading-30 font-light">SEO-Optimierung</strong>
         </li>
-        <li class="relative z-3 bg-purple lg:col-span-6 lg:order-5">
-            <h3>Langfristige Betreuung</h3>
-            <p>
-                Sichere dir nachhaltigen Erfolg: Ich sorge für reibungslose Updates, proaktive Optimierungen und kontinuierliche Weiterentwicklung – damit deine Website nicht nur online bleibt, sondern stetig besser wird.
-            </p>
+
+        <li class="flex flex-wrap justify-center content-center absolute top-12 left-200 lg:top-0 lg:left-1/2 lg:-translate-x-1/2 lg:ml-376 lg:-mt-265 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none" data-scroll-reveal data-services-tile data-services-tile-id="6">
+            <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 16 16">
+                <path fill="currentColor" fill-rule="evenodd" d="M1.884 8H3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.492-.41c-.343-1.885-.427-4.735.474-7.14c.453-1.21 1.164-2.33 2.237-3.145C4.797 1.485 6.205 1 8 1c1.796 0 3.204.486 4.282 1.305c1.073.816 1.784 1.934 2.237 3.145c.901 2.405.816 5.255.474 7.14a.5.5 0 0 1-.492.41h-.946c-1.479 1.738-3.713 2.108-5.074 2H7.5a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v.517c.964-.012 2.214-.295 3.217-1.105A.5.5 0 0 1 12 12.5v-4a.5.5 0 0 1 .5-.5h1.615c-.1-.752-.271-1.5-.533-2.2c-.405-1.08-1.02-2.025-1.907-2.699C10.794 2.431 9.606 2 8 2s-2.793.43-3.676 1.101c-.887.674-1.5 1.618-1.906 2.7A10 10 0 0 0 1.884 8" clip-rule="evenodd"/>
+            </svg>
+            <strong class="hidden lg:block text-black text-30 leading-30 font-light">Langfristige Betreuung</strong>
         </li>
+
     </ol>
 </div>
+
+<script>
+    import { lazyLoadWhenIdle } from '@scripts/utils/lazy-load-when-idle';
+    lazyLoadWhenIdle(() => import('@scripts/modules/services.js'), {
+        selector: '*[data-services]',
+        rootMargin: '0px 0px 10% 0px',
+        onLoad: ({ services }) => services?.init?.()
+    });
+</script>
+
+<style>
+    .swiper-slide {
+        opacity: 0 !important;
+    }
+    .swiper-slide-visible {
+        opacity: 1 !important;
+    }
+</style>
 
 
 
