--- a/src/components/modules/ShortFacts.astro
+++ b/src/components/modules/ShortFacts.astro
@@ -15,16 +15,16 @@ import Flag from "@components/partials/Flag.astro";
                 <span class="w-full">Jahre Erfahrung <br> im Frontend-Development</span>
             </p>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-blue text-black border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
             <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center w-full">
                 <span class="w-full text-48 leading-48 lg:text-96 lg:leading-96"><span data-count-up-number="75" class="inline-block w-54 lg:w-108">0</span>+</span>
                 <span class="w-full">Umgesetzte <br> Design-Systeme</span>
             </p>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-black text-white border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-20 lg:m-0 col-span-6  bg-blue text-black border-1 lg:col-span-4 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
             <blockquote class="not-italic">„Ich baue Interfaces, <br> <span data-typing-effect>die sich richtig anfühlen.</span>“</blockquote>
         </li>
-        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-10 lg:m-0 col-span-6  text-white bg-black border-1 lg:col-span-8 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
+        <li data-scroll-reveal class="flex flex-wrap flex-shrink-0 justify-center items-center content-center mr-10 lg:m-0 col-span-6  text-black bg-blue border-1 lg:col-span-8 lg:row-span-1 w-250 h-250 lg:h-auto lg:w-auto">
             <p class="flex flex-wrap flex-shrink-0 justify-center items-center content-center w-full">
                 <span class="w-full text-48 leading-48 lg:text-96 lg:leading-96"><span data-count-up-number="800000" class="inline-block w-180 lg:w-360">0</span>+</span>
                 <span class="w-full">Zeilen <br> Code geschrieben</span>
