--- a/src/components/partials/Swiper.astro
+++ b/src/components/partials/Swiper.astro
@@ -2,6 +2,7 @@
 import 'swiper/css';
 import 'swiper/css/navigation';
 import 'swiper/css/pagination';
+import 'swiper/css/effect-fade';
 
 const {swiperSettings = '', className = ''} = Astro.props;
 ---
