--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -39,7 +39,10 @@ import Flag from "@components/partials/Flag.astro";
         </figure>
         <div class="col-span-5 mt-30 lg:col-start-7 lg:mt-0">
             <Flag>Über mich</Flag>
-            <h1 class="text-green mb-15" id="hero-intro-title" data-scroll-reveal>Frontend Architect.</h1>
+            <h1 class="text-green mb-15 bg-gradient-to-r from-green to-red bg-clip-text text-transparent" id="hero-intro-title" data-scroll-reveal>
+                <span>Frontend </span>
+                <span>Architect.</span>
+            </h1>
             <p class="mt-9 lg:mt-30" data-scroll-reveal>
                 Mit Fokus auf <strong>Performance</strong>, <strong>Accessibility</strong> und <strong>sauberen Code</strong>
                 entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen –
