--- a/src/components/partials/Button.astro
+++ b/src/components/partials/Button.astro
@@ -7,7 +7,7 @@ const {
     ...props
 } = Astro.props;
 
-const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-40 bg-blue text-center text-black text-16 leading-28 font-medium tracking-2 transition-all z-3
+const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-50 bg-blue text-center text-black text-16 leading-28 font-medium tracking-2 transition-all z-3 bg-gradient-to-r from-green to-blue
 before:content-[''] before:absolute before:inset-0 before:bg-green before:w-0 before:transition-all before:duration-500 hover:before:w-full focus:before:w-full active:before:w-full before:left-0 before:top-0 before:-z-1 ${className}`;
 let iconSVG = '';
 
