--- a/src/components/partials/Button.astro
+++ b/src/components/partials/Button.astro
@@ -7,8 +7,7 @@ const {
     ...props
 } = Astro.props;
 
-const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-50 bg-blue text-center text-black text-16 leading-28 font-medium tracking-2 transition-all z-3 bg-gradient-to-r from-green to-blue
-before:content-[''] before:absolute before:inset-0 before:bg-green before:w-0 before:transition-all before:duration-500 hover:before:w-full focus:before:w-full active:before:w-full before:left-0 before:top-0 before:-z-1 ${className}`;
+const buttonClass = `button relative inline-flex w-auto items-center justify-center py-10 px-50 bg-blue text-center text-black text-16 leading-28 font-medium tracking-2 duration-200 ease-out will-change-transform z-3 bg-gradient-to-r from-green to-blue ${className}`;
 let iconSVG = '';
 
 if(icon === 'send'){
@@ -32,14 +31,25 @@ if(icon === 'send'){
 }
 ---
 {href &&
-    <a href={href} class={buttonClass} target={target} rel={target === '_blank' ? 'noopener noreferrer' : ''} {...props}>
+    <a data-magnetic-button href={href} class={buttonClass} target={target} rel={target === '_blank' ? 'noopener noreferrer' : ''} {...props}>
         <Fragment set:html={iconSVG}/>
         <slot/>
     </a>
 }
 {!href &&
-    <button class={buttonClass} type="button" {...props}>
+    <button data-magnetic-button class={buttonClass} type="button" {...props}>
         <Fragment set:html={iconSVG}/>
         <slot/>
     </button>
 }
+
+<script>
+    import { lazyLoadWhenIdle } from '@scripts/utils/lazy-load-when-idle';
+    if(window.innerWidth >= 1024){
+        lazyLoadWhenIdle(() => import('@scripts/partials/magnetic-button.js'), {
+            selector: '*[data-magnetic-button]',
+            rootMargin: '0px 0px 10% 0px',
+            onLoad: ({ magneticButton }) => magneticButton?.init?.()
+        });
+    }
+</script>
