--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -1,11 +1,13 @@
 ---
 
 import CVEntry from "@components/partials/CVEntry.astro";
+import Flag from "@components/partials/Flag.astro";
 ---
 
 <section class="cv module" aria-labelledby="cv-title" id="lebenslauf" role="region">
     <div class="grid">
         <div class="col-span-full">
+            <Flag>Verlauf</Flag>
             <h2 data-scroll-reveal id="cv-title" class="mb-90">Lebenslauf</h2>
             <div data-cv class="relative pb-10 pt-30">
                 <div class="absolute top-0 left-25 w-1 h-1/1 bg-white lg:left-1/2 lg:-translate-x-1/2"></div>
