--- a/src/components/modules/Services.astro
+++ b/src/components/modules/Services.astro
@@ -59,7 +59,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h2 class="h2 mb-20" id="services-title" data-scroll-reveal>Gemeinsam zur starken Website</h2>
                         <p data-scroll-reveal>
-                            Ich unterstütze dich von der Strategie über Design und Entwicklung bis hin zur SEO-Optimierung und langfristigen Betreuung – für überzeugende, responsive Websites mit nachhaltigem Erfolg.
+                            Ich unterstütze dich von der Strategie über Design und Entwicklung bis hin zur <strong>SEO-Optimierung</strong> und <strong>langfristigen Betreuung</strong> – für überzeugende, responsive Websites mit <em>nachhaltigem Erfolg</em>.
                         </p>
                     </div>
                 </div>
@@ -67,7 +67,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h3 class="h2 mb-20">Strategie & Konzeption</h3>
                         <p>
-                            Klare Strategien für deinen digitalen Erfolg: Ich denke ganzheitlich, plane strukturiert und begleite dein Projekt von der Idee bis zur Umsetzung – effizient, fokussiert und wirkungsvoll.
+                            Klare Strategien für deinen <em>digitalen Erfolg</em>: Ich denke ganzheitlich, plane strukturiert und begleite dein Projekt von der Idee bis zur Umsetzung – <strong>effizient, fokussiert und wirkungsvoll</strong>.
                         </p>
                     </div>
                 </div>
@@ -75,7 +75,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h3 class="h2 mb-20">Responsives Webdesign</h3>
                         <p>
-                            Individuelle Designs statt Lösungen von der Stange: Ich gestalte nutzerfreundliche Interfaces, die auf jedem Gerät überzeugen und deine Marke stark inszenieren.
+                            <strong>Individuelle Designs</strong> statt Lösungen von der Stange: Ich gestalte <em>nutzerfreundliche Interfaces</em>, die auf jedem Gerät überzeugen und deine Marke stark inszenieren.
                         </p>
                     </div>
                 </div>
@@ -83,7 +83,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h3 class="h2 mb-20">Frontend-Entwicklung</h3>
                         <p>
-                            Skalierbar, performant, zukunftssicher: Ich entwickle saubere Frontend-Architekturen mit Fokus auf Struktur, Qualität und eine nahtlose User Experience.
+                            <strong>Skalierbar, performant, zukunftssicher</strong>: Ich entwickle saubere Frontend-Architekturen mit Fokus auf Struktur, Qualität und eine <em>nahtlose User Experience</em>.
                         </p>
                     </div>
                 </div>
@@ -91,7 +91,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h3 class="h2 mb-20">SEO-Optimierung</h3>
                         <p>
-                            Mehr Sichtbarkeit, mehr Reichweite, mehr Kunden: Durch technische SEO, schnelle Ladezeiten und gezielte Content-Strategie bringe ich dein Projekt ganz nach vorne in den Suchergebnissen.
+                            <strong>Mehr Sichtbarkeit, mehr Reichweite, mehr Kunden</strong>: Durch technische SEO, schnelle Ladezeiten und <em>gezielte Content-Strategie</em> bringe ich dein Projekt nach vorne in den Suchergebnissen.
                         </p>
                     </div>
                 </div>
@@ -99,7 +99,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                     <div>
                         <h3 class="h2 mb-20">Langfristige Betreuung</h3>
                         <p>
-                            Sichere dir nachhaltigen Erfolg: Ich sorge für reibungslose Updates, proaktive Optimierungen und kontinuierliche Weiterentwicklung – damit deine Website nicht nur online bleibt, sondern stetig besser wird.
+                            Sichere dir nachhaltigen Erfolg: Ich sorge für reibungslose Updates, proaktive Optimierungen und <strong>kontinuierliche Weiterentwicklung</strong> – damit deine Website nicht nur online bleibt, sondern stetig besser wird.
                         </p>
                     </div>
                 </div>
@@ -120,7 +120,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
         </div>
     </div>
     <ol class="relative flex items-start h-280 lg:h-400 mx-10 mt-10 ">
-        <li class="flex flex-wrap justify-center content-center absolute top-123 lg:top-0 left-0 lg:left-1/2 lg:-translate-x-1/2 lg:-ml-340 lg:mt-130 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none " data-scroll-reveal data-services-tile data-services-tile-id="2">
+        <li data-magnetic-button class="flex flex-wrap justify-center content-center absolute top-123 lg:top-0 left-0 lg:left-1/2 lg:-translate-x-1/2 lg:-ml-340 lg:mt-130 lg:w-300 lg:h-250 px-40 py-30 z-3 bg-blue text-black text-center [clip-path:polygon(25%_0%,_75%_0%,_100%_50%,_75%_100%,_25%_100%,_0%_50%)] [&.active]:bg-green hover:bg-green transition-all duration-500 cursor-pointer select-none " data-scroll-reveal data-services-tile data-services-tile-id="2">
             <svg class="block m-auto lg:w-60 lg:h-60 lg:mb-10" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 256 256">
                 <path fill="currentColor" d="M68 152a36 36 0 1 0 36 36a36 36 0 0 0-36-36Zm0 56a20 20 0 1 1 20-20a20 20 0 0 1-20 20ZM34.34 106.34L48.69 92L34.34 77.66a8 8 0 0 1 11.32-11.32L60 80.69l14.34-14.35a8 8 0 0 1 11.32 11.32L71.31 92l14.35 14.34a8 8 0 0 1-11.32 11.32L60 103.31l-14.34 14.35a8 8 0 0 1-11.32-11.32Zm187.32 96a8 8 0 0 1-11.32 11.32L196 199.31l-14.34 14.35a8 8 0 0 1-11.32-11.32L184.69 188l-14.35-14.34a8 8 0 0 1 11.32-11.32L196 176.69l14.34-14.35a8 8 0 0 1 11.32 11.32L207.31 188Zm-45.19-89.51c-6.18 22.33-25.32 41.63-46.53 46.93a8.13 8.13 0 0 1-2 .24a8 8 0 0 1-1.93-15.76c15.63-3.91 30.35-18.91 35-35.68c3.19-11.5 3.22-29-14.71-46.9l-2.3-2.35V80a8 8 0 0 1-16 0V40a8 8 0 0 1 8-8h40a8 8 0 0 1 0 16h-20.69l2.35 2.34c18.24 18.25 24.92 40.44 18.81 62.49Z"/>
             </svg>
