--- a/src/components/partials/Flag.astro
+++ b/src/components/partials/Flag.astro
@@ -1,6 +1,6 @@
 ---
 const { ...props } = Astro.props;
 ---
-<em data-scroll-reveal class="inline-block px-14 pt-10 pb-8 text-12 mb-5 lg:mb-8 leading-12 not-italic font-normal text-black uppercase bg-green tracking-wider [clip-path:polygon(12px_0,100%_0,100%_calc(100%-12px),calc(100%-12px)_100%,0_100%,0_12px)]" {...props}>
+<em data-scroll-reveal class="inline-block px-14 pt-9 pb-8 text-12 lg:text-14 mb-5 lg:mb-8 leading-12 not-italic font-normal text-black bg-green tracking-wider [clip-path:polygon(12px_0,100%_0,100%_calc(100%-12px),calc(100%-12px)_100%,0_100%,0_12px)]" {...props}>
     <slot/>
 </em>
