--- a/src/components/partials/Accordion.astro
+++ b/src/components/partials/Accordion.astro
@@ -19,16 +19,16 @@ const generateRandomString = () => {
 const randomId = generateRandomString();
 ---
 
-<div data-accordion data-accordion-initially-open={openInitially} class=`accordion lg:w-auto lg:h-544 lg:flex ${className}`>
+<div data-accordion data-accordion-initially-open={openInitially} class=`accordion lg:w-auto lg:h-644 lg:flex ${className}`>
 
-    <button data-accordion-button aria-controls={randomId} class="w-full py-20 cursor-pointer text-center text-30 leading-30 lg:h-full lg:relative lg:h-544 lg:w-98">
-        <span class="lg:block lg:-rotate-90 lg:w-544 lg:h-98 lg:leading-98 lg:whitespace-nowrap lg:absolute lg:bottom-0 lg:left-0 lg:origin-bottom-left lg:translate-x-98"><slot name="title"></slot></span>
+    <button data-accordion-button aria-controls={randomId} class="w-full py-20 cursor-pointer text-left text-25 leading-25 lg:text-36 lg:leading-36 lg:h-full lg:relative lg:h-644 lg:w-98">
+        <span class="relative lg:block lg:-rotate-90 lg:w-644 lg:h-98 lg:leading-98 lg:whitespace-nowrap lg:absolute lg:bottom-0 lg:left-0 lg:origin-bottom-left lg:translate-x-98"><slot name="title"></slot></span>
 
-        <span data-accordion-icon class=`hidden transition-transform`></span>
+        <span data-accordion-icon class=`transition-transform absolute lg:top-20 lg:left-35`></span>
     </button>
 
     <div data-accordion-content id={randomId} class=`${initialHeight} w-full lg:w-auto overflow-hidden transition-all ease-in-out`>
-        <div class="pb-5 border-t lg:border-t-0 lg:border-l-1 lg:h-1/1 lg:w-812">
+        <div class="pb-5 border-t lg:border-t-0 lg:h-1/1 lg:w-812">
             <slot/>
         </div>
     </div>
