--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -5,7 +5,7 @@
     --color-border-grey:            #7D8287;
     --color-grey:                   #7D8287;
 
-    --color-black:                  #1B1E21;
+    --color-black:                  #14171A;
     --color-full-black:             #000;
 
     --color-red:                    #D24436;
@@ -21,7 +21,7 @@
     --color-green:                  #A8E6CF;
     --color-blue:                   #D0D8E2;
 
-    --color-main-background:        #1B1E21;
+    --color-main-background:        #14171A;
 
     --color-font:                   #FFF;
     --color-links:                  #FFF;
