--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -9,7 +9,7 @@ import Flag from "@components/partials/Flag.astro";
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div data-image-tilt-effect class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(75%_0%,_100%_50%,_75%_100%,_0%_100%,_25%_50%,_0%_0%)]">
                 <Image
-                        src="/images/me1.png"
+                        src="/images/me1.jpg"
                         width="333"
                         height="533"
                         sizes={[
