--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "@components/partials/Image.astro";
-import Button from "../partials/Button.astro";
+import Button from "@components/partials/Button.astro";
 import Flag from "@components/partials/Flag.astro";
 ---
 
@@ -9,7 +9,7 @@ import Flag from "@components/partials/Flag.astro";
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div data-image-tilt-effect class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(75%_0%,_100%_50%,_75%_100%,_0%_100%,_25%_50%,_0%_0%)]">
                 <Image
-                        src="/images/me1.jpg"
+                        src="/images/me_old.jpg"
                         width="333"
                         height="533"
                         sizes={[
